@@ -78,13 +78,11 @@ INSERT IGNORE INTO `config` (`name`, `value`) VALUES
 ('PORT_POP3-SSL', '995;tcp;POP3-SSL;0;0.0.0.0'),
 ('PORT_IMAP', '143;tcp;IMAP;1;0.0.0.0'),
 ('PORT_IMAP-SSL', '993;tcp;IMAP-SSL;0;0.0.0.0'),
-('PORT_POSTGREY', '10023;tcp;POSTGREY;1;127.0.0.1'),
-('PORT_POLICYD-WEIGHT', '12525;tcp;POLICYD-WEIGHT;1;127.0.0.1'),
 ('SHOW_COMPRESSION_SIZE', '1'),
 ('PREVENT_EXTERNAL_LOGIN_ADMIN', '1'),
 ('PREVENT_EXTERNAL_LOGIN_RESELLER', '1'),
 ('PREVENT_EXTERNAL_LOGIN_CLIENT', '1'),
-('DATABASE_REVISION', '197'),
+('DATABASE_REVISION', '198'),
 ('PHPINI_ALLOW_URL_FOPEN', 'off'),
 ('PHPINI_DISPLAY_ERRORS', 'off'),
 ('PHPINI_UPLOAD_MAX_FILESIZE', '10'),
