@@ -107,10 +107,6 @@ AWSTATS_CONFIG_DIR = /etc/awstats
 AWSTATS_ENGINE_DIR = /usr/lib/cgi-bin
 AWSTATS_WEB_DIR = /usr/share/awstats
 
-## Postgrey data
-
-PORT_POSTGREY = 10023
-
 # Backup
 
 BACKUP_ROOT_DIR = /var/www/imscp/engine/backup
