@@ -712,7 +712,6 @@ sub _buildMainCfFile
 		MTA_MAILBOX_MIN_UID => $uid,
 		MTA_MAILBOX_UID => $uid,
 		MTA_MAILBOX_GID => $gid,
-		PORT_POSTGREY => $main::imscpConfig{'PORT_POSTGREY'},
 		CONF_DIR => $main::imscpConfig{'CONF_DIR'},
 		SSL => ($main::imscpConfig{'SERVICES_SSL_ENABLED'} eq 'yes') ? '' : '#',
 		CERTIFICATE => 'imscp_services'
