@@ -88,7 +88,6 @@ require_once 'iMSCP/Config/Handler.php';
  * @property int CRITICAL_UPDATE_REVISION Last critical update revision
  * @property string WEBSTATS_GROUP_AUTH Webstats group authentication
  * @property string BASE_SERVER_IP Base server IP
- * @property string PORT_POSTGREY Posgrey port
  * @property int BuildDate i-MSCP package Build date
  * @property string PHP_TIMEZONE PHP timezone
  * @property int DEBUG Debug mode
