@@ -1,4 +1,4 @@
-﻿i-MSCP ChangeLog
+﻿﻿i-MSCP ChangeLog
 
 ------------------------------------------------------------------------------------------------------------------------
 Git 1.1.x
@@ -6,6 +6,9 @@ Git 1.1.x
 
 CONFIGS
 	Added php5-json package ( Debian Jessie )
+
+ENGINE
+	Removed: policyd-weight and postgrey ( Postfix SMTP access policy delegation )
 
 FRONTEND
 	Added: Support for eAccelerator, WinCache, XCache and ZendOptimizerPlus opcode caches
